<resources>
    <string name="app_name">Loan Collector</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- Strings used for Home -->
    <string name="placeholder_title">Geld geleend</string>
    <string name="placeholder_naam">Jan Jansen</string>
    <string name="placeholder_hoeveelheid">50,00</string>
    <string name="placeholder_aan">Aan</string>
    <string name="description_avatar_groot">Groot plaatje</string>
    <string name="description_avatar_klein">Klein plaatje</string>


    <!-- Strings used for Add Loan -->
    <string name="placeholder_add_title">Title</string>
    <string name="placeholder_add_naam">Aan wie?</string>
    <string name="placeholder_add_hoeveelheid">hoeveel?</string>
    <string name="placeholder_add_description">Geef een omschrijving</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings used for Rating -->
    <string name="rate_instruction">Please rate us</string>
    <string name="rate_rate">Submit Stars</string>
    <string name="rate_thank_you">Thank you for rating us %.1f stars</string>

    <!--String used for Loan Detail -->
    <string name="loan_detail_placeholder_title">Placeholder Title</string>
    <string name="loan_detail_placeholder_naam">Placeholder Naam</string>
    <string name="loan_detail_placeholder_amount">50.00</string>
    <string name="loan_detail_placeholder_detial">Lorem ipsum bogus text</string>
    <string name="loan_detail_aan">Aan</string>
    <string name="loan_detail_hoeveel">Hoeveel</string>

    <!--Strings used for App info -->
    <string name="info_fragment_title">App Info</string>
    <string name="info_title_doel">Het doel van de app</string>
    <string name="info_text_doel">De app is bedoeld voor mensen die regelmatig geld of items uitlenen en een methode zoeken om deze
    leningen te registreren omdat ze simpelweg vaak gewoon vergeten worden door een of beide partijen.</string>
    <string name="info_title_hoe">Hoe werkt de app?</string>
    <string name="info_text_hoe">Druk op het hoofdscherm op het plusje, voer de gegevens in en let hierbij op dat je bij bedragen een punt (.) gebruikt in plaats van een comma (,) en sla het item op.
    wanneer je in het homescherm bent zie je al de aangemaakte items staan, wanneer je een item naar rechts swiped dan verwijder je het desbetreffende item, wanneer je op een item klikt krijg je alle deteals over het item te zien.</string>

</resources>
