<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoanDetailActivity">

    <TextView
        android:id="@+id/tvdetailtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/loan_detail_placeholder_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvdetailnaamuseless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loan_detail_aan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvdetailtitle" />

    <TextView
        android:id="@+id/tvdetailnaam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/loan_detail_placeholder_naam"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvdetailnaamuseless"
        app:layout_constraintTop_toBottomOf="@+id/tvdetailtitle" />

    <TextView
        android:id="@+id/tvdetailamountuseless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loan_detail_hoeveel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvdetailnaamuseless" />

    <TextView
        android:id="@+id/tvdetailamount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/loan_detail_placeholder_amount"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toEndOf="@+id/tvdetailamountuseless"
        app:layout_constraintTop_toBottomOf="@+id/tvdetailnaam" />

    <TextView
        android:id="@+id/tvdetaildescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/loan_detail_placeholder_detial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvdetailamount"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>